--- a/package.json
+++ b/package.json
@@ -34,15 +34,17 @@
     "lib/**/*"
   ],
   "dependencies": {
-    "@abraham/reflection": "^0.7.0"
+    "@abraham/reflection": "^0.7.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0"
   },
   "devDependencies": {
-    "typescript": "^3.7.5",
     "@types/jest": "^24.9.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "ts-jest": "^24.3.0",
     "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.7.5"
   }
 }
