--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "declaration": true,
     "outDir": "./lib",
     "strict": true,
-    "noImplicitThis": false
+    "noImplicitThis": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src",
